--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
         matrix:
-                python-version: [2.7]
+          python-version: [3.6]
     
     steps:
     - uses: actions/checkout@v2
@@ -25,4 +25,5 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
-          python -m pip install --upgrade pip 
+          python pipenv install
+          PATH=$INSTALL_DIR/bin:$CUBE_INSTALL_DIR:$PATH && ./scripts/travis_ci/travis_install_binaries.sh $INSTALL_DIR $CUBE_INSTALL_DIR
