--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -2,29 +2,24 @@
 
 name: UBC Formula Electric CI
 
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
-on:
-  workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
-        required: true
+env:
+        INSTALL_DIR = /usr/local
+        CUBE_INSTALL_DIR = $INSTALL_DIR/STM32CubeMX
+        PYTHONPATH=$PWD
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
+  build:
+          
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ github.event.inputs.name }}"
+    - uses: actions/checkout@v2
+              
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with: 
+        python-version: 3.7
+    - name: Install Dependencies
+      run: |
+          pip install pipenv
+          PATH=$INSTALL_DIR/bin:$CUBE_INSTALL_DIR:$PATH && ./scripts/travis_ci/travis_install_binaries.sh $INSTALL_DIR $CUBE_INSTALL_DIR
