--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -6,17 +6,9 @@ on: [push, pull_request]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
-          
+  formatting_check:          
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v2
-              
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with: 
-        python-version: 3.7
-    - name: Install Dependencies
-      run: |
-          pip install pipenv
+      - uses: actions/checkout@v2
+      - name: Env Setup
+        run: pip install pipenv
