--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -10,5 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Env Setup
-        run: pip install pipenv
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Install dependencies with pipenv
+        run: | 
+          pip install pipenv
