--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -23,6 +23,8 @@ jobs:
                 INSTALL_DIR: /usr/local
                 CUBE_INSTALL_DIR: $INSTALL_DIR/STM32CubeMX
                 PYTHON_PATH: $PWD
+                PATH: $INSTALL_DIR/bin:$CUBE_INSTALL_DIR:$PATH && ./scripts/travis_ci/travis_install_binaries.sh $INSTALL_DIR $CUBE_INSTALL_DIR
+
       - name: Run any random script
         run: ./scripts/travis_ci/travis_script.sh
           
