--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -21,12 +21,16 @@ jobs:
           ./scripts/travis_ci/pull_git_submodules.sh
           pip install pipenv
           git lfs pull
+          pipenv install          
+          PATH: $INSTALL_DIR/bin:$CUBE_INSTALL_DIR:$PATH && ./scripts/travis_ci/travis_install_binaries.sh $INSTALL_DIR $CUBE_INSTALL_DIR
         env: 
-                INSTALL_DIR: /usr/local
-                CUBE_INSTALL_DIR: $INSTALL_DIR/STM32CubeMX
-                PYTHON_PATH: $PWD
-                PATH: $INSTALL_DIR/bin:$CUBE_INSTALL_DIR:$PATH && ./scripts/travis_ci/travis_install_binaries.sh $INSTALL_DIR $CUBE_INSTALL_DIR
+          INSTALL_DIR: /usr/local
+          CUBE_INSTALL_DIR: $INSTALL_DIR/STM32CubeMX
+          PYTHON_PATH: $PWD
 
       - name: Run any random script
-        run: ./scripts/travis_ci/travis_script.sh
+        run: |
+                ./scripts/travis_ci/print_bin_versions.sh
+                ./scripts/travis_ci/travis_script.sh $CUBE_INSTALL_DIR/STM32CubeMX
+                ./scripts/travis_ci/travis_script.sh
           
