--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: 3.7
       - name: Install dependencies with pipenv
         run: | 
-          ./scripts/travis_ci/pull_git_submodules.sh
+          #./scripts/travis_ci/pull_git_submodules.sh
           pip install pipenv
           git lfs pull
           pipenv install          
