--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -19,7 +19,7 @@ jobs:
                           with:
                                   python-version: 3.6
                         - name: Before Install
-                          id: dee doo dee doo
+                          id: bigchungusappreciator
                           run: |
                                   ./scripts/travis_ci/pull_git_submodules.sh
                                   pip install pipenv
