--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 
 jobs:
         test_job:
-                name: "Test 0"
+                name: "Firmware-Test"
                 runs-on: ubuntu-latest
                 env: 
                         INSTALL_DIR: /usr/local
