--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -31,9 +31,9 @@ jobs:
                           
                         - name: Install-Addons
                           run: |
-                                  sudo apt-get install libbz2-1.0:i386
-                                  sudo apt-get install libncurses5:i386
-                                  sudo apt-get install libz1:i386
+                                  sudo apt-get install libbz2-1.0
+                                  sudo apt-get install libncurses5
+                                  sudo apt-get install libz1
                                   sudo apt-get install valgrind
                           
                         - name: Before-Script
