--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -7,6 +7,21 @@ jobs:
         Firmware_Tests:
                 name: "Firmware_Tests"                        
                 runs-on: ubuntu-latest
+                strategy:
+                  matrix:
+                        include:
+                          - Test: Build-ARM-Executables
+                            name: "Build ARM Executables"
+                            env: RUN_ARM_BUILD="true"
+                          - Test: Build-And-Run-x86-Test
+                            name: "Build and Run x86 Tests"
+                            env: RUN_X86_TEST="true"
+                          - Test: Check-Formatting
+                            name: "Check Formatting"
+                            env: RUN_X86_TESTS="true"
+                          - Test: Check-STM32CubeMX-Code-Generation
+                            name: "Check STM32CubeMX Code Generation"
+                            env: RUN_CUBE_CODEGEN_CHECKS="true" 
                 env: 
                         INSTALL_DIR: /usr/local
                         CUBE_INSTALL_DIR: $INSTALL_DIR/STM32CubeMX
