--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -10,17 +10,13 @@ jobs:
                 strategy:
                   matrix:
                         include:
-                          - Test: Build-ARM-Executables
-                            name: "Build ARM Executables"
+                          - Name: "Build ARM Executables"
                             env: RUN_ARM_BUILD="true"
-                          - Test: Build-And-Run-x86-Test
-                            name: "Build and Run x86 Tests"
+                          - Name: "Build and Run x86 Tests"
                             env: RUN_X86_TEST="true"
-                          - Test: Check-Formatting
-                            name: "Check Formatting"
+                          - Name: "Check Formatting"
                             env: RUN_X86_TESTS="true"
-                          - Test: Check-STM32CubeMX-Code-Generation
-                            name: "Check STM32CubeMX Code Generation"
+                          - Name: "Check STM32CubeMX Code Generation"
                             env: RUN_CUBE_CODEGEN_CHECKS="true" 
                 env: 
                         INSTALL_DIR: /usr/local
