--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -5,19 +5,19 @@ on: [pull_request]
 
 jobs:
         Firmware_Tests:
-                name: "Firmware_Tests"                        
+                name: ${{ matrix.Name }}                        
                 runs-on: ubuntu-latest
                 strategy:
-                  matrix:
-                        include:
-                          - Name: "Build ARM Executables"
-                            env: RUN_ARM_BUILD="true"
-                          - Name: "Build and Run x86 Tests"
-                            env: RUN_X86_TEST="true"
-                          - Name: "Check Formatting"
-                            env: RUN_X86_TESTS="true"
-                          - Name: "Check STM32CubeMX Code Generation"
-                            env: RUN_CUBE_CODEGEN_CHECKS="true" 
+                        matrix:
+                                include:
+                                - Name: "Build ARM Executables"
+                                  env: RUN_ARM_BUILD="true"
+                                - Name: "Build and Run x86 Tests"
+                                  env: RUN_X86_TEST="true"
+                                - Name: "Check Formatting"
+                                  env: RUN_X86_TESTS="true"
+                                - Name: "Check STM32CubeMX Code Generation"
+                                  env: RUN_CUBE_CODEGEN_CHECKS="true" 
                 env: 
                         INSTALL_DIR: /usr/local
                         CUBE_INSTALL_DIR: $INSTALL_DIR/STM32CubeMX
@@ -58,8 +58,5 @@ jobs:
                         - name: Script
                           run: |
                                   ./scripts/travis_ci/travis_script.sh $CUBE_INSTALL_DIR/STM32CubeMx
-                                  
-                        - name: ${{ matrix.Name }}
-                          run: | 
-                                ${{ matrix.env }}
-                                          
+                          
+                                            
