--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -58,6 +58,6 @@ jobs:
                                   
                         - name: Script
                           run: |
-                                  echo ls
+                                  ./slatt/slatt/a
                                   ./scripts/travis_ci/travis_script.sh $CUBE_INSTALL_DIR/STM32CubeMx
                                                                     
