--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -26,6 +26,7 @@ jobs:
                                   sudo apt-get install libncurses5
                                   sudo apt-get install libz1
                                   sudo apt-get install valgrind
+                                  sudo systemctl start xvfb
                         
                         - uses: actions/checkout@v2
                           with:
