--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -45,7 +45,8 @@ jobs:
                         - name: Install
                           run: |
                                   pipenv install
-                                  PATH=$INSTALL_DIR/bin:$CUBE_INSTALL_DIR:$PATH && ./scripts/travis_ci/travis_install_binaries.sh $INSTALL_DIR $CUBE_INSTALL_DIR
+                          env: 
+                                PATH : $INSTALL_DIR/bin:$CUBE_INSTALL_DIR:$PATH && ./scripts/travis_ci/travis_install_binaries.sh $INSTALL_DIR $CUBE_INSTALL_DIR
                                                   
                         - name: Before-Script
                           run: |
