--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -52,7 +52,7 @@ jobs:
                                                   
                         - name: Before-Script
                           run: |
-                                  echo $RUN_ARM_BUILD
+                                  echo "$RUN_ARM_BUILD"
                                   ./scripts/travis_ci/print_bin_versions.sh
                                   
                         - name: Script
