--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -44,7 +44,7 @@ jobs:
                                   
                         - name: Install
                           run: |
-                                  echo $INSTALL_DIR
+                                  echo ${{ env.INSTALL_DIR }}
                                   pipenv install
                           env: 
                                 PATH : $INSTALL_DIR/bin:$CUBE_INSTALL_DIR:$PATH && ./scripts/travis_ci/travis_install_binaries.sh $INSTALL_DIR $CUBE_INSTALL_DIR
