--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -22,7 +22,7 @@ jobs:
                 steps:
                         - name: Install-Addons
                           run: |
-                                  sudo apt-get install build-essential
+                                  sudo apt install gcc-arm-none-eabi
                                   sudo dpkg --add-architecture i386
                                   sudo apt-get update
                                   sudo apt-get install libbz2-1.0
