--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -23,6 +23,7 @@ jobs:
                         - name: Install-Addons
                           run: |
                                   sudo apt install gcc-arm-none-eabi
+                                  gcc --version
                                   sudo dpkg --add-architecture i386
                                   sudo apt-get update
                                   sudo apt-get install libbz2-1.0
