--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -23,6 +23,8 @@ jobs:
                         - name: Install-Addons
                           run: |
                                   sudo apt-get install gcc-arm-none-eabi
+                                  sudo apt install gdb-arm-none-eabi
+
                                   sudo dpkg --add-architecture i386
                                   sudo apt-get update
                                   sudo apt-get install libncurses5
