--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -22,6 +22,7 @@ jobs:
                 steps:
                         - name: Install-Addons
                           run: |
+                                  sudo apt-get install gdb
                                   sudo apt-get install gcc-arm-none-eabi
                                   sudo apt install gdb-arm-none-eabi
 
