--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -34,6 +34,7 @@ jobs:
                         - uses: actions/checkout@v2
                           with:
                                  submodules: false
+                                 fetch-depth: 50
                         - name: Install-Python-Packages
                           uses: actions/setup-python@v2
                           with:
