--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -22,10 +22,13 @@ jobs:
                 steps:
                         - name: Install-Addons
                           run: |
+                                  sudo apt-get remove binutils-arm-none-eabi gcc-arm-none-eabi
+                                  sudo apt-get update
                                   sudo apt-get install gcc-arm-none-eabi
+                                  sudo apt-get install gdb-arm-none-eabi
+
 
                                   sudo dpkg --add-architecture i386
-                                  sudo apt-get update
                                   sudo apt-get install libncurses5
                                   sudo apt-get install libbz2-1.0
                                   sudo apt-get install libz1
