--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -32,7 +32,8 @@ jobs:
                                   sudo apt-get install libbz2-1.0
                                   sudo apt-get install libz1
                                   sudo apt-get install valgrind
-                        
+                                                          sudo apt-get install gcc-arm-none-eabi
+
                         - uses: actions/checkout@v2
                           with:
                                  submodules: false
