--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -12,8 +12,8 @@ jobs:
                                 include:
                                 - Name: "Build and Run x86 Tests"
                                   env: RUN_X86_TESTS
-                                #- Name: "Run ARM Build"
-                                #  env: RUN_ARM_BUILD
+                                - Name: "Check Formatting"
+                                  env: RUN_FORMATTING_CHECKS
                 env: 
                         INSTALL_DIR: /usr/local
                         CUBE_INSTALL_DIR: $INSTALL_DIR/STM32CubeMX
