--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -14,6 +14,8 @@ jobs:
                                   env: RUN_X86_TESTS
                                 - Name: "Check Formatting"
                                   env: RUN_FORMATTING_CHECKS
+                                - Name: "Build ARM Executables"
+                                  env: RUN_ARM_BUILD
                 env: 
                         INSTALL_DIR: /usr/local
                         CUBE_INSTALL_DIR: $INSTALL_DIR/STM32CubeMX
