--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -60,7 +60,7 @@ jobs:
                                   
                         - name: ${{ matrix.name }}
                           run: |
-                                  ./scripts/travis_ci/travis_script.sh $CUBE_INSTALL_DIR/STM32CubeMx
+                                  ./scripts/travis_ci/travis_script.sh ${{  env.CUBE_INSTALL_DIR  }}/STM32CubeMx
                           env: 
                                 ${{ matrix.env }} : "true"
                                                                     
