--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -67,4 +67,5 @@ jobs:
                           env: 
                                 ${{ matrix.env }} : "true"
                                 PYTHONPATH: ${{ env.PYTHONPATH }}
+                                PATH: $INSTALL_DIR/bin:$CUBE_INSTALL_DIR:$PATH && ./scripts/travis_ci/travis_install_binaries.sh $INSTALL_DIR $CUBE_INSTALL_DIR
                                                                     
