--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -66,6 +66,4 @@ jobs:
                                   ./scripts/travis_ci/travis_script.sh $CUBE_INSTALL_DIR/STM32CubeMx
                           env: 
                                 ${{ matrix.env }} : "true"
-                                PYTHONPATH: ${{ env.PYTHONPATH }}
-                                PATH: $INSTALL_DIR/bin:$CUBE_INSTALL_DIR:$PATH && ./scripts/travis_ci/travis_install_binaries.sh $INSTALL_DIR $CUBE_INSTALL_DIR
-                                                                    
+                                PYTHONPATH: ${{ ev.PYTHONPATH }}                                                                    
