--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -52,8 +52,8 @@ jobs:
                         - name: Install
                           run: |
                                   pipenv install
-                          #env: 
-                          #      PATH : ${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:${{env.PATH}} && ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}
+                          env: 
+                                PATH : ${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:${{env.PATH}} && ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}
                         
                         - name: Before ${{ matrix.name }}
                           run: |
