--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -52,8 +52,10 @@ jobs:
                         - name: Install
                           run: |
                                   pipenv install
-                          env: 
-                                PATH : ${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:${{env.PATH}} && ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}
+                                  echo "${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:${{env.PATH}}/.local/bin" >> $GITHUB_PATH
+                                  echo "./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}" >> $GITHUB_PATH
+                          #env: 
+                                #PATH : ${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:${{env.PATH}} && ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}
                         
                         - name: Before ${{ matrix.name }}
                           run: |
@@ -63,7 +65,7 @@ jobs:
                                   
                         - name: ${{ matrix.name }}
                           run: |
-                                  ./scripts/travis_ci/travis_script.sh ${{env.CUBE_INSTALL_DIR}}/STM32CubeMx
+                                  ./scripts/travis_ci/travis_script.sh ${{ env.CUBE_INSTALL_DIR }}/STM32CubeMx
                           env: 
                                 ${{ matrix.env }} : "true"
                                 #PATH : ${{env.INSTALL_DIR}}/bin:${{env.CUBE_INSTALL_DIR}}:${{env.PATH}} && ./scripts/travis_ci/travis_install_binaries.sh ${{env.INSTALL_DIR}} ${{env.CUBE_INSTALL_DIR}}
