--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -33,6 +33,7 @@ jobs:
                                   sudo apt-get install libz1
                                   sudo apt-get install valgrind
                                   sudo apt-get install gcc-arm-none-eabi
+                                  ln -s /usr/bin/gdb-multiarch /usr/bin/arm-none-eabi-gdb
                                   sudo apt-get install xvfb
 
                         - uses: actions/checkout@v2
