--- a/.github/workflows/githubactions.yml
+++ b/.github/workflows/githubactions.yml
@@ -26,6 +26,7 @@ jobs:
                 steps:                               
                         - name: Install-Addons
                           run: |                                  
+                                  sudo add-apt-repository ppa:team-gcc-arm-embedded/ppa
                                   sudo apt-get update
                                   sudo dpkg --add-architecture i386
                                   sudo apt-get install libncurses5
@@ -33,7 +34,8 @@ jobs:
                                   sudo apt-get install libz1
                                   sudo apt-get install valgrind
                                   sudo apt-get install gcc-arm-none-eabi
-                                  sudo ln -s /usr/bin/gdb-multiarch /usr/bin/arm-none-eabi-gdb
+                                  sudo apt-get remove binutils-arm-none-eabi gcc-arm-none-eabi
+                                  sudo apt-get install gcc-arm-none-eabi
                                   sudo apt-get install xvfb
 
                         - uses: actions/checkout@v2
